[gd_scene load_steps=19 format=2]

[ext_resource path="res://gui/buttons/choice.png" type="Texture" id=1]
[ext_resource path="res://script/title_screen.gd" type="Script" id=2]
[ext_resource path="res://gui/buttons/choiceselected.png" type="Texture" id=3]
[ext_resource path="res://gui/fonts/default_data.tres" type="DynamicFontData" id=4]
[ext_resource path="res://script/load_menu.gd" type="Script" id=5]
[ext_resource path="res://gui/buttons/back_pressed.png" type="Texture" id=6]
[ext_resource path="res://gui/buttons/back.png" type="Texture" id=7]
[ext_resource path="res://gui/SaveLoadAtlas.png" type="Texture" id=8]
[ext_resource path="res://gui/sys01-resources.assets-2042.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( -2, 134, 376, 68 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 968, 1572, 968, 472 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 543, 95, 52, 100 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 607, 95, 52, 100 )

[sub_resource type="DynamicFont" id=50]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=51]
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=58]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back:margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 87 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer:anchor_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 1.5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VBoxContainer:anchor_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 1.5 ]
}

[sub_resource type="Animation" id=59]
resource_name = "show"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back:margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 87, 87, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer:anchor_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.5, 0.5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VBoxContainer:anchor_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.5, 0.5 ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="TextureButton" parent="VBoxContainer"]
margin_right = 372.0
margin_bottom = 59.0
rect_min_size = Vector2( 372, 59 )
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/NewGame"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.466667, 0.133333, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0 )
text = "New Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="TextureButton" parent="VBoxContainer"]
margin_top = 63.0
margin_right = 372.0
margin_bottom = 122.0
rect_min_size = Vector2( 372, 59 )
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/Continue"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.466667, 0.133333, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0 )
text = "Continue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shortcut" type="TextureButton" parent="VBoxContainer"]
visible = false
margin_top = 126.0
margin_right = 372.0
margin_bottom = 185.0
rect_min_size = Vector2( 372, 59 )
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/Shortcut"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.466667, 0.133333, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0 )
text = "Shortcut"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LoadMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="LoadMenu/VBoxContainer"]
margin_right = 376.0
margin_bottom = 68.0
size_flags_horizontal = 0
texture = SubResource( 46 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="LoadMenu/VBoxContainer"]
margin_top = 68.0
margin_right = 968.0
margin_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource( 47 )

[node name="Prev" type="TextureButton" parent="LoadMenu/VBoxContainer/TextureRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 96.0
margin_top = -50.0
margin_right = 132.0
margin_bottom = 50.0
grow_vertical = 2
rect_scale = Vector2( -1, 1 )
texture_normal = SubResource( 48 )
texture_hover = SubResource( 49 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="TextureButton" parent="LoadMenu/VBoxContainer/TextureRect"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_right = -40.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = SubResource( 48 )
texture_hover = SubResource( 49 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LoadMenu/VBoxContainer/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveIcon" type="TextureButton" parent="LoadMenu/VBoxContainer/TextureRect/VBoxContainer"]
margin_right = 555.0
margin_bottom = 96.0
grow_horizontal = 2
rect_min_size = Vector2( 555, 96 )
expand = true

[node name="Line" type="RichTextLabel" parent="LoadMenu/VBoxContainer/TextureRect/VBoxContainer/SaveIcon"]
anchor_right = 1.0
margin_left = 196.0
margin_top = 4.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 50 )
custom_colors/default_color = Color( 0.466667, 0.133333, 0, 1 )
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="LoadMenu/VBoxContainer/TextureRect/VBoxContainer/SaveIcon"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -6.0
margin_bottom = -4.0
grow_vertical = 0
custom_fonts/font = SubResource( 51 )
custom_colors/font_color = Color( 0.466667, 0.133333, 0, 1 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveIcon2" type="TextureButton" parent="LoadMenu/VBoxContainer/TextureRect/VBoxContainer"]
margin_top = 100.0
margin_right = 555.0
margin_bottom = 196.0
grow_horizontal = 2
rect_min_size = Vector2( 555, 96 )
expand = true

[node name="Line" type="RichTextLabel" parent="LoadMenu/VBoxContainer/TextureRect/VBoxContainer/SaveIcon2"]
anchor_right = 1.0
margin_left = 196.0
margin_top = 4.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 50 )
custom_colors/default_color = Color( 0.466667, 0.133333, 0, 1 )
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="LoadMenu/VBoxContainer/TextureRect/VBoxContainer/SaveIcon2"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -6.0
margin_bottom = -4.0
grow_vertical = 0
custom_fonts/font = SubResource( 51 )
custom_colors/font_color = Color( 0.466667, 0.133333, 0, 1 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveIcon3" type="TextureButton" parent="LoadMenu/VBoxContainer/TextureRect/VBoxContainer"]
margin_top = 200.0
margin_right = 555.0
margin_bottom = 296.0
grow_horizontal = 2
rect_min_size = Vector2( 555, 96 )
expand = true

[node name="Line" type="RichTextLabel" parent="LoadMenu/VBoxContainer/TextureRect/VBoxContainer/SaveIcon3"]
anchor_right = 1.0
margin_left = 196.0
margin_top = 4.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 50 )
custom_colors/default_color = Color( 0.466667, 0.133333, 0, 1 )
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="LoadMenu/VBoxContainer/TextureRect/VBoxContainer/SaveIcon3"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -6.0
margin_bottom = -4.0
grow_vertical = 0
custom_fonts/font = SubResource( 51 )
custom_colors/font_color = Color( 0.466667, 0.133333, 0, 1 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveIcon4" type="TextureButton" parent="LoadMenu/VBoxContainer/TextureRect/VBoxContainer"]
margin_top = 300.0
margin_right = 555.0
margin_bottom = 396.0
grow_horizontal = 2
rect_min_size = Vector2( 555, 96 )
expand = true

[node name="Line" type="RichTextLabel" parent="LoadMenu/VBoxContainer/TextureRect/VBoxContainer/SaveIcon4"]
anchor_right = 1.0
margin_left = 196.0
margin_top = 4.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 50 )
custom_colors/default_color = Color( 0.466667, 0.133333, 0, 1 )
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="LoadMenu/VBoxContainer/TextureRect/VBoxContainer/SaveIcon4"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -6.0
margin_bottom = -4.0
grow_vertical = 0
custom_fonts/font = SubResource( 51 )
custom_colors/font_color = Color( 0.466667, 0.133333, 0, 1 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageLabel" type="Label" parent="LoadMenu/VBoxContainer/TextureRect"]
margin_left = 28.0
margin_top = 24.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0 )
text = "Page 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="LoadMenu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_right = 104.0
grow_vertical = 0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="LoadMenu"]
anims/hide = SubResource( 58 )
anims/show = SubResource( 59 )
[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_new_game"]
[connection signal="pressed" from="VBoxContainer/Continue" to="LoadMenu" method="_open"]
[connection signal="pressed" from="LoadMenu/VBoxContainer/TextureRect/Prev" to="LoadMenu" method="_prev_page"]
[connection signal="pressed" from="LoadMenu/VBoxContainer/TextureRect/Next" to="LoadMenu" method="_next_page"]
[connection signal="pressed" from="LoadMenu/VBoxContainer/TextureRect/VBoxContainer/SaveIcon" to="LoadMenu" method="_load_from" binds= [ 0 ]]
[connection signal="pressed" from="LoadMenu/VBoxContainer/TextureRect/VBoxContainer/SaveIcon2" to="LoadMenu" method="_load_from" binds= [ 1 ]]
[connection signal="pressed" from="LoadMenu/VBoxContainer/TextureRect/VBoxContainer/SaveIcon3" to="LoadMenu" method="_load_from" binds= [ 2 ]]
[connection signal="pressed" from="LoadMenu/VBoxContainer/TextureRect/VBoxContainer/SaveIcon4" to="LoadMenu" method="_load_from" binds= [ 3 ]]
[connection signal="pressed" from="LoadMenu/Back" to="LoadMenu" method="_back"]
